# cars-api

./: .gitignore  Dockerfile  alembic.ini  cars.db  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 9b9bce139960_create_users_table.py  a98cc789d0ac_initial_migration.py
app/: main.py  models.py  schemas.py  service.py  settings.py
app/db/: active_record.py  session.py
app/models/: base.py  cars.py  users.py
app/schemas/: cars.py  users.py
app/service/: cars.py  users.py
initial_data/: initial_data.csv  load_initial_data.py
scripts/: create_user.py  load_initial_data.py
